--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 POSTGRES_HOST=127.0.0.1
-POSTGRES_DB=plants_test
-POSTGRES_TEST_DB=plants_test
+POSTGRES_DB=store
+POSTGRES_TEST_DB=store_test
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=1234
 ENV=dev
-BCRYPT_PASSWORD=speak-friend-and-enter
+BCRYPT_PASSWORD=store
 SALT_ROUNDS=10
 TOKEN_SECRET=123456
