fix package json

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "jasmineBuild": "npm run build && npm run  jasmine",
     "start": "nodemon src/service.ts",
     "watch": "tsc-watch --esModuleInterop src/service.ts --outDir  ./dist --onSuccess ",
-    "newTest": "ENV=dev db-migrate --env test up && jasmine && db-migrate db:drop test"
-  },
+    "newTest": "ENV=dev db-migrate --env test up && jasmine && db-migrate db:drop test",
+    "migrate-up":"db-migrate up --config newTest",
+    "migrate-down":"db-migrate down"
+    },
   "author": "",
   "license": "ISC",
   "devDependencies": {
