--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "service.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint 'index.js'",
     "prettier": "prettier --config .prettierrc '*.js' --write",
     "build": "npx tsc",
@@ -12,7 +11,8 @@
     "jasmineBuild": "npm run build && npm run  jasmine",
     "start": "nodemon src/service.ts",
     "watch": "tsc-watch --esModuleInterop src/service.ts --outDir  ./dist --onSuccess ",
-    "newTest": "ENV=dev db-migrate --env test up && jasmine && db-migrate db:drop test",
+    "newTest": "ENV=dev db-migrate --env test up && npm run build && npm run  jasmine && db-migrate db:drop test",
+    "test": "export ENV=dev && db-migrate --env test up && jasmine && db-migrate db:drop test",
     "migrate-up": "db-migrate --env  up && db-migrate up",
     "migrate-down": "db-migrate down"
   },
